fix z-index pos

--- a/ws-navigator-pack/mod_wsnavigator/css/navigation.css
+++ b/ws-navigator-pack/mod_wsnavigator/css/navigation.css
@@ -32,7 +32,7 @@
     text-shadow: 1px 1px 2px rgba(252, 254, 255, 0.45);
     background: rgba(186,209,212,0.55) !important;
 }
-#trigger { position: relative;  margin: 35px; float: left; padding: 10px; }
+#trigger { position: relative;  margin: 35px; float: left; }
 #trigger > h2 {
     border: none;
     background: transparent;
@@ -46,6 +46,7 @@
     border-radius: 0 2px 2px 0;
     position: relative;
     float: left;
+    margin: 6px 4px;
     text-decoration: none;
     z-index: 999;
     transition: letter-spacing 0.6s linear 0.3s,font-weight 0.6s linear 0.1s,text-shadow 0.6s ease-in-out,color 0.6s ease-in-out 0.1s,background 0.6s ease-in-out 0.4s;
